# herb-garden

./: cli.py  config.py  garden.py  herb.py  pyproject.toml
reports/: __init__.py  formatter.py  generator.py  statistics.py
scripts/: seed_data.py  validate_garden.py
storage/: __init__.py  exporter.py  loader.py  serializer.py
taxonomy/: __init__.py  classifier.py  companions.py  lookup.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py  test_workflow.py
tests/unit/: test_garden.py  test_herb.py  test_reports.py  test_storage.py  test_taxonomy.py  test_utils.py
utils/: __init__.py  formatting.py  search.py  traversal.py  validation.py
